src/objects/Apttus_Config2__LoyaltyPointAccrualSummary__c.object
<CustomObject>
    <description>Represents a summary of loyalty points accrued for the account or contact</description>
    <fields>
        <fullName>Apttus_Config2__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account associated with the point accrual summary</description>
        <inlineHelpText>ID of the account associated with the point accrual summary</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loyalty Point Accrual Summary</relationshipLabel>
        <relationshipName>LoyaltyPointAccrualSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the loyalty level is active</description>
        <inlineHelpText>Indicates whether the loyalty level is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Comments__c</fullName>
        <description>User Entered Memo text</description>
        <inlineHelpText>User Entered Memo text</inlineHelpText>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the contact associated with the point accrual summary</description>
        <inlineHelpText>ID of the contact associated with the point accrual summary</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loyalty Point Accrual Summary</relationshipLabel>
        <relationshipName>LoyaltyPointAccrualSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CycleEndDate__c</fullName>
        <description>The loyalty cycle end date associated with the point accrual summary</description>
        <inlineHelpText>The loyalty cycle end date associated with the point accrual summary</inlineHelpText>
        <label>Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CycleStartDate__c</fullName>
        <description>The loyalty cycle start date associated with the point accrual summary</description>
        <inlineHelpText>The loyalty cycle start date associated with the point accrual summary</inlineHelpText>
        <label>Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnrollmentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated loyalty enrollment</description>
        <inlineHelpText>ID of the associated loyalty enrollment</inlineHelpText>
        <label>Enrollment</label>
        <referenceTo>Apttus_Config2__IncentiveLoyaltyEnrollment__c</referenceTo>
        <relationshipLabel>Loyalty Point Accrual Summary</relationshipLabel>
        <relationshipName>LoyaltyPointAccrualSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GrantDate__c</fullName>
        <description>The date the loyalty level was granted to the account/contact based on points accrued for the incentive</description>
        <inlineHelpText>The date the loyalty level was granted to the account/contact based on points accrued for the incentive</inlineHelpText>
        <label>Grant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Loyalty Point Accrual Summary</relationshipLabel>
        <relationshipName>LoyaltyPointAccrualSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyLevelEarned__c</fullName>
        <description>The loyalty level earned by the account/contact or custom point accrual level based on points accrued for the incentive</description>
        <inlineHelpText>The loyalty level earned by the account/contact or custom point accrual level based on points accrued for the incentive</inlineHelpText>
        <label>Loyalty Level (Earned)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyLevelOverride__c</fullName>
        <description>The loyalty level override granted to the account/contact or custom point accrual level</description>
        <inlineHelpText>The loyalty level override granted to the account/contact or custom point accrual level</inlineHelpText>
        <label>Loyalty Level (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyLevel__c</fullName>
        <description>The loyalty level granted to the account/contact based on points accrued for the incentive</description>
        <inlineHelpText>The loyalty level granted to the account/contact based on points accrued for the incentive</inlineHelpText>
        <label>Loyalty Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OverrideDate__c</fullName>
        <description>The date the loyalty level was overridden</description>
        <inlineHelpText>The date the loyalty level was overridden</inlineHelpText>
        <label>Override Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OverrideReason__c</fullName>
        <description>The reason for the loyalty level override</description>
        <inlineHelpText>The reason for the loyalty level override</inlineHelpText>
        <label>Override Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PointAccrualLevel__c</fullName>
        <description>The point accrual level</description>
        <inlineHelpText>The point accrual level</inlineHelpText>
        <label>Point Accrual Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Points__c</fullName>
        <description>The loyalty points accrued for the account or contact</description>
        <inlineHelpText>The loyalty points accrued for the account or contact</inlineHelpText>
        <label>Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loyalty Point Accrual Summary</label>
    <nameField>
        <displayFormat>SA-{0000000000}</displayFormat>
        <label>Summary Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Point Accrual Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>